Segmentation fault when entering/unmetaing meta strip in sequencer #45726

Closed
opened 2015-08-07 19:31:07 +02:00 by Owen · 8 comments

System Information
Arch Linux x86_64 (but confirmed by two other users in #blender on unknown platforms)

Blender Version
Broken: 2.74 (from distro), 2.75a (both from distro and official), 2.75-44384c6 (from builder)

Short description of error
Entering a meta strip in the sequence editor (tab) or unmetaing the strip (Alt-G) triggers a segfault on a particular blend file I have.
It's reproducable and has been confirmed by two other users in #blender.

Backtrace

Program received signal SIGSEGV, Segmentation fault.
- 0  0x00000000009e2463 in draw_seq_strip.isra ()
- 1  0x00000000009e4004 in draw_timeline_seq ()
- 2  0x0000000000bef22f in ED_region_do_draw ()
- 3  0x000000000093b404 in wm_draw_update ()
- 4  0x0000000000936c28 in WM_main ()
- 5  0x000000000091c63d in main ()

Exact steps for others to reproduce the error
Simply open this blend file and then try to enter or unmeta the meta strip in the VSE.

**System Information** Arch Linux x86_64 (but confirmed by two other users in #blender on unknown platforms) **Blender Version** Broken: 2.74 (from distro), 2.75a (both from distro and official), 2.75-44384c6 (from builder) **Short description of error** Entering a meta strip in the sequence editor (tab) or unmetaing the strip (Alt-G) triggers a segfault on a particular blend file I have. It's reproducable and has been confirmed by two other users in #blender. **Backtrace** ``` Program received signal SIGSEGV, Segmentation fault. - 0 0x00000000009e2463 in draw_seq_strip.isra () - 1 0x00000000009e4004 in draw_timeline_seq () - 2 0x0000000000bef22f in ED_region_do_draw () - 3 0x000000000093b404 in wm_draw_update () - 4 0x0000000000936c28 in WM_main () - 5 0x000000000091c63d in main () ``` **Exact steps for others to reproduce the error** Simply open [this blend file](http://www.pasteall.org/blend/37467) and then try to enter or unmeta the meta strip in the VSE.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @ShadowNinja

Added subscriber: @ShadowNinja
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Go Florida sea base

Go Florida sea base

This issue was referenced by 8af8bab0c5

This issue was referenced by 8af8bab0c5acc1cf59c507f28cf5c349782932e6

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-08-07 23:43:28 +02:00

Please always attach files here, pasteall.org is not a persistent storage at all… main.blend

Please *always* attach files here, pasteall.org is not a persistent storage at all… [main.blend](https://archive.blender.org/developer/F221484/main.blend)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45726
No description provided.