Fix T45726: Wrong handling of 'failed to generate' audio waveform data in VSE strip draw code.